<?xml version="1.0" encoding="utf-8"?>
<!--
// Pandora FMS - http://pandorafms.com
// ==================================================
// Copyright (c) 2005-2011 Artica Soluciones Tecnologicas
// Please see http://pandorafms.org for full contribution list

// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public License
// as published by the Free Software Foundation; version 2

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details. 
-->
<resources>
	<string name="const_string_preferences">PANDROID_DATA</string>

	<string name="status_str">Status</string>
	<string name="setup_str">Setup</string>
	<string name="app_name">Pandroid Agent</string>
	<string name="interval">Interval:</string>
	<string name="update">Update configuration.</string>
	<string name="reset">Set default</string>
	<string name="serverAddr">Server Address:</string>
	<string name="serverPort">Server Port:</string>
	<string name="confTitle">Pandroid Agent Configuration</string>
	<string name="agent">Agent name:</string>
	<string name="gpsMode">GPS Mode</string>
	<string name="gpsCurrent">Current position (high battery cost)</string>
	<string name="summary">Current configuration:</string>
	<string name="starStop">Restart</string>
	<string name="gpsLast">Last known position</string>
	<string name="loading">Loading…</string>
	<string name="last_values">Last values</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="battery_level">Battery Level</string>
	<string name="orientation">Orientation</string>
	<string name="proximity">Proximity</string>
	<string name="incorrect_update">Could not update options.</string>
	<string name="task">Task</string>
	<string name="memory">Memory</string>
	<string name="help_label_str">Help</string>
	<string name="about_label_str">About</string>
	<string name="licensed_under_gpl_str">Licensed under GPL v2</string>
	<string name="develop_team_str">Developers: Sergio M. Zarzuelo, Miguel de Dios, Mark Holland</string>
	<string name="pandroid_agent_str">Pandroid Agent</string>
	<string name="pandroid_agent_copyright">Copyright © 2011 Artica</string>
	<string name="about_desc">Pandroid Agent logo</string>
	<string name="help_str">Help</string>
	<string name="memory_avaliable_str" formatted="false">Available: &#37;iKb Total: &#37;iKb</string>
	<string name="never_str">Never.</string>
	<string name="now_str">Now.</string>
	<string name="seconds_str">seconds ago.</string>
	<string name="conctact_error_str">Contact error</string>
	<string name="last_contact_str">Last Contact:\n</string>
	<string name="help_text_str">
		Pandroid Agent is an Android Pandora FMS agent for Pandora FMS. &lt;p&gt;
		Pandora FMS is a general purpose monitoring system. With the android agent you can get all sorts of information from your device,
		 the gps location, how much battery is left, available memory on the device, monitoring if a process is active, the time since the device
		  was turned on, a HELLO signal for monitoring installations of the app, an inventory with all the installed apps as well as information 
		  for android phones with a sim card; the sim card ID, the number of SMS sent/received, the number of calls incoming/missed/outgoing, 
		  the network operator and type, the phone type, the mobile signal strength, the number of bytes sent/received over the mobile network.
		  Complete source code is provided.&lt;p&gt;See more about Pandora FMS at &lt;a href=&quot;http://pandorafms.com&quot;&gt;http://pandoraFMS.com&lt;/a&gt;&lt;/p&gt;
	</string>
	<string name="start">Start</string>
	<string name="correct_start">Connection successful</string>
	<string name="config_saved">Configuration saved successfully</string>
	<string name="contact_stopped_str">Agent Stopped</string>
	<string name="seconds">Seconds</string>
	<string name="running">Running</string>
	<string name="stopped">Stopped</string>
	
	
	
	<string name="sim_id">Sim ID:</string>
	<string name="sim_id_value"/>
	<string name="uptime">Device up time:</string>
	<string name="uptime_value"/>
	<string name="sms_received">Received SMS: </string>
	<string name="sms_received_value"/>
	<string name="sms_sent">Sent SMS: </string>
	<string name="sms_sent_value"/>
	<string name="network_operator">Network operator:</string>
	<string name="network_operator_value"/>
	<string name="network_type">Network type:</string>
	<string name="network_type_value"/>
	<string name="phone_type">Phone type:</string>
	<string name="phone_type_value"/>
	<string name="signal_strength">Signal strength:</string>
	<string name="signal_strength_value"/>
	<string name="incoming_calls">Incoming calls:</string>
	<string name="incoming_calls_value"/>
	<string name="missed_calls">Missed calls:</string>
	<string name="missed_calls_value"/>
	<string name="outgoing_calls">Outgoing calls:</string>
	<string name="outgoing_calls_value"/>
	<string name="receive_bytes">Bytes received:</string>
	<string name="receive_bytes_value"/>
	<string name="transmit_bytes">Bytes transmitted:</string>
	<string name="transmit_bytes_value"/>
	<string name="roaming">Roaming:</string>
	<string name="roaming_value"/>
	
	
	<string name="alert_dialog_password">Enter password</string>
	<string name="password_no_match">Passwords do not match!</string>
	<string name="password_error">error</string>
	<string name="password">password</string>
	<string name="password_length">password must be longer than 6 characters!</string>
	<string name="password_incorrect">Wrong password</string>
	<string name="password_set">Set Password(leave blank for none)</string>
	<string name="password_enter">Enter Password</string>
	<string name="password_repeat">Repeat Password</string>
	<string name="password_choose_text">Do you want to set a password?</string>
	<string name="password_checkbox">Don\'t ask again</string>
	<string name="password_created">Password successfully created</string>
	<string name="password_removed">No password set</string>
	<string name="set_password">Create/Change password</string>
	
	<string name="mobileWebURL">Mobile server URL:</string>
	<string name="go_to_web">View Mobile site</string>
	
	<string name="bufferSize">XML Buffer Size(KB)</string>
	
	<string name="enter">enter</string>
	<string name="back">back</string>
	<string name="yes">yes</string>
	<string name="no">no</string>
	
	<string name="simIDReport">Report Sim ID</string>
	<string name="gpsReport">Report GPS data</string>
	<string name="memoryReport">Report available memory</string>
	<string name="taskToReport">Choose task to report:</string>
	<string name="taskReport">Report task</string>
	<string name="uptimeReport">Report device up time</string>
	<string name="NetworkOperatorReport">Report network operator</string>
	<string name="NetworkTypeReport">Report network type</string>
	<string name="PhoneTypeReport">Report phone type</string>
	<string name="SignalStrengthReport">Report signal strength</string>
	<string name="ReceivedSMSReport">Report number of received SMS</string>
	<string name="SentSMSReport">Report number of sent SMS</string>
	<string name="IncomingCallsReport">Report number of incoming calls</string>
	<string name="MissedCallsReport">Report number of missed calls</string>
	<string name="OutgoingCallsReport">Report number of outgoing calls</string>
	<string name="BytesReceivedReport">Report amount of received mobile data</string>
	<string name="BytesSentReport">Report amount of sent mobile data</string>
	<string name="HelloSignalReport">Report Hello Signal</string>
	<string name="BatteryLevelReport">Report battery level</string>
	<string name="RoamingReport">Report if roaming</string>
	<string name="InventoryReport">Report inventory of installed apps</string>
	
	<string name="notification_title">Pandroid</string>
	<string name="notification_message">Agent is running</string>
	<string name="ticker_text">Connecting…</string>
	<string name="stopAgent">Stop Agent</string>
	<string name="restartAgent">Restart Agent</string>
	<string name="notificationCheck">Show notification when running?</string>
	
</resources>
