<?xml version="1.0" encoding="utf-8"?>
<!--
// Pandora FMS - http://pandorafms.com
// ==================================================
// Copyright (c) 2005-2011 Artica Soluciones Tecnologicas
// Please see http://pandorafms.org for full contribution list

// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public License
// as published by the Free Software Foundation; version 2

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details. 
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
>
	<ImageView
		android:layout_weight="0"
		android:id="@+id/img_logo_about"
		android:layout_width="wrap_content"
   		android:layout_height="0dp"
   		android:layout_gravity="center"
   		android:padding="5dp"
   		android:contentDescription="@string/about_desc"
   		android:src="@drawable/pandorafms_logo"
	/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/pandroid_agent_copyright"
	/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/licensed_under_gpl_str"
		android:gravity="center_horizontal"
	/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/develop_team_str"
		android:gravity="left"
	/>
	<TextView
		android:id="@+id/url_pandora"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
	/>
</LinearLayout>