<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/yes_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="88dp"
            android:text="@string/yes" />

        <Button
            android:id="@+id/no_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/yes_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/no" />

        <CheckBox
            android:id="@+id/password_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/password_checkbox" />

    </RelativeLayout>

</LinearLayout>